LU-6974 util: set max_sectors_kb properly

Set max_sectors_kb properly to aviod crash on
some special block devices.

Test-Parameters: alwaysuploadlogs \
envdefinitions=SLOW=yes,ENABLE_QUOTA=yes \ mdtfilesystemtype=ldiskfs
mdsfilesystemtype=ldiskfs \ ostfilesystemtype=ldiskfs clientdistro=el7
ossdistro=el7 \ mdsdistro=el7 mdtcount=1 testlist=runtests

Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: Ifc7efd169f0db0b54c3f727fc65716c203930e29